2004-05-24  Albert Chu <chu11@llnl.gov>

        * freeipmi.spec.in: Added devel package.

2004-05-19  Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Added optional powerman restart check.
	
2004-05-18  A Balamurugan  <bala.a@californiadigital.com>

	* doc/examples/hello-sensors.c: fixed.
	
2004-05-18  Albert Chu <chu11@llnl.gov>

	* bmc-watchdog/bmc-watchdog: Fix careless cut and paste typo.
	
2004-05-13  Albert Chu <chu11@llnl.gov>

	* bmc-watchdog/Makefile.am: Remove uninstall-extra.

	* autogen.sh: Change --foreign strictness to --gnu since we are
	now a gnu project.

	* COPYING, INSTALL, freeipmi.spec.in: New Files.

	* Makefile.am: Add COPYING and INSTALL to dist and install. Add
	freeipmi.spec.in to dist.

	* configure.ac: Generate freeipmi.spec.

	* doc/bmc-watchdog.8.in: Changed default io-port to corresponding
	value used in code.

2004-05-13  Ian Zimmerman  <itz@californiadigital.com>

	* libfreeipmi/Makefile.am (IPCDIR), doc/examples/Makefile.am
	(Examplesdir), doc/Makefile.am (docdir): s/PACKAGE_NAME/PACKAGE/

	* fish/src/bmc-conf-key-utils.c: make bmc_config_key_list static,
	it is not used outside of its defining file.

	* fish/src/bmc-conf-key-utils.h: remove bmc_config_key_list and
	make it static, it is not used outside of its defining file.

	* fish/src/bmc-conf-checkout.c, fish/src/bmc-conf-commit.c,
	fish/src/bmc-conf-utils.c, fish/src/ipmi-wrapper-sel.c,
	fish/src/ipmi-wrapper.c, fish/src/scm-procedures.c,
	libfreeipmi/src/ipmi-dev-global-cmds.c,
	libfreeipmi/src/ipmi-kcs-interface.c,
	libfreeipmi/src/ipmi-lan-interface.c,
	libfreeipmi/src/ipmi-msg-support-cmds.c,
	libfreeipmi/src/ipmi-sdr-repo-cache.c,
	libfreeipmi/src/ipmi-sel-record-types.c, libfreeipmi/src/rmcp.c:
	add nasty autoconf dance for alloca.

	* configure.ac: Add AC_FUNC_ALLOCA.

2004-05-13  Albert Chu <chu11@llnl.gov>

	* COPYING.ipmiping, DISCLAIMER.ipmiping, COPYING.rmcpping,
	DISCLAIMER.rmcpping, doc/ipmiping.8.in, doc/rmcpping.8.in,