@@ -1,3 +1,8 @@
+2004-06-16  A Balamurugan  <bala.a@californiadigital.com>
+
+	* fish/src/bmc-conf-commit.c: now set_user_password_commit()
+	enables users.
+	
 2004-05-24  Albert Chu <chu11@llnl.gov>
 
         * freeipmi.spec.in: Added devel package.
